Modificado los atributos de los cuadros de busqueda en la hoja de estilo

--- a/wsgi/static/assets/css/main.css
+++ b/wsgi/static/assets/css/main.css
@@ -1565,13 +1565,14 @@
 			transition: none !important;
 		}
 
-	body, input, select, textarea {
+	body, textarea {
 		color: #a2a2a2;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 400;
 		line-height: 1.75em;
 	}
+
 
 	a {
 		-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
@@ -1720,6 +1721,9 @@
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
+	header input {
+		color: #000000;
+	}
 
 	header h2 + p {
 		font-size: 1.25em;
@@ -1749,6 +1753,7 @@
 
 	form {
 		margin: 0 0 2em 0;
+		color:#000000;
 	}
 
 	label {
