--- a/wsgi/static/assets/css/main.css
+++ b/wsgi/static/assets/css/main.css
@@ -1767,6 +1767,7 @@
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
+	input[type="checkbox"],
 	select,
 	textarea {
 		-moz-appearance: none;
